navbar updated and logout added
